replace reflection; fix some bugs; refactor